--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -1,9 +1,9 @@
 .contenedorItem {
     text-align: center;
-    border: 1px solid #e3e1e1;
+    border: 1px solid #ae00ff;
     margin: 3rem;
 }
 
 img {
-    width: 50vw;
+    width: 30vw;
 }
