--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,5 +1,5 @@
 .cardProducto {
-    background-color: #bcbd8b;
+    background-color: rgb(160, 27, 249);
     border-radius: 10px;
     width: 15rem;
     padding: 1rem;
@@ -8,6 +8,12 @@
     flex-direction: column;
     align-items: center;
 }
+.cardProducto h3{
+    color: white    ;
+}
+.cardProducto {
+    color: white    ;
+}
 
 .imgProducto {
     width: 150px;
@@ -15,8 +21,8 @@
 }
 
 .btnProducto {
-    background-color: #373d20;
-    color: white;
+    background-color: #ffffff;
+    color: black;
     font-size: 1.2rem;
     width: 8rem;
     border-radius: 10px;
